# cookiecutter-personal

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE.md  README.md  cookiecutter.json  environment.yml  notes.txt
.github/: copilot-instructions.md
.github/agents/: Implementer.agent.md  Plan Architect.agent.md  Planner.agent.md  plan.agent.md
.github/hooks/: context.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_slug }}/: .dvcignore  .gitignore  CHANGELOG.md  LICENSE  README.md  environment.yml  install.md  pyproject.toml  tasks.py
{{ cookiecutter.project_slug }}/.github/: copilot-instructions.md
{{ cookiecutter.project_slug }}/.github/workflows/: ci.yml
{{ cookiecutter.project_slug }}/config/: config.yml
{{ cookiecutter.project_slug }}/notebooks/: 00-manual-src.ipynb
{{ cookiecutter.project_slug }}/src/data/: make_dataset.py
{{ cookiecutter.project_slug }}/src/features/: build_features.py
{{ cookiecutter.project_slug }}/src/models/: models.py  predict_model.py  train_model.py
{{ cookiecutter.project_slug }}/src/utils/: general_functions.py  paths.py
{{ cookiecutter.project_slug }}/src/visualization/: visualize.py
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_paths.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/features/: build_features.py  test_features.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/models/: models.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_module_name }}/utils/: generalFunctions.py
(+2 files in other folders)
